--- a/links.md.html
+++ b/links.md.html
@@ -64,6 +64,7 @@ Develop
 ## Shell
 - [msys2](http://www.msys2.org/)
 - [pacman](https://wiki.archlinux.org/index.php/pacman)
+- [tmux](https://github.com/tmux/tmux)
 - [translate-shell](https://www.soimort.org/translate-shell/)
 - [w3m](http://w3m.sourceforge.net/index.ja.html)
 
@@ -77,19 +78,46 @@ Develop
 - [vim](https://www.vim.org/)
   | [vim-jp](http://vim-jp.org/)
 - [VimAwesome](https://vimawesome.com/)
+- Plugin manager
   - [vim-plug](https://github.com/junegunn/vim-plug)
+<!--
   - [neobundle](https://github.com/Shougo/neobundle.vim)
   - [dein](https://github.com/Shougo/dein.vim)
+-->
+- File manager
   - [nerdtree](https://github.com/scrooloose/nerdtree)
   - [nerdtree-git-plugin](https://github.com/Xuyuanp/nerdtree-git-plugin)
+- Git
   - [vim-fugitive](https://github.com/tpope/vim-fugitive)
   - [vim-gitgutter](https://github.com/airblade/vim-gitgutter)
   - [agit](https://github.com/cohama/agit.vim)
+<!--
   - [gitv](https://github.com/gregsexton/gitv)
+-->
+- Edit
+  - [UltiSnips](https://github.com/SirVer/ultisnips)
+  - [vim-snippets](https://github.com/honza/vim-snippets)
+  - [vim-quickhl](https://github.com/t9md/vim-quickhl)
+  - [vim-dirdiff](https://github.com/will133/vim-dirdiff)
+  - [vim-repeat](https://github.com/tpope/vim-repeat)
+  - [vim-surround](https://github.com/tpope/vim-surround)
+  - [nerdcommenter](https://github.com/scrooloose/nerdcommenter)
+- Completion and LSP
+  - [vim-lsp](https://github.com/prabirshrestha/vim-lsp)
+  - [language servers](https://github.com/prabirshrestha/vim-lsp/wiki/Servers)
+    - [ccls](https://github.com/MaskRay/ccls)
+  - [asyncomplete.vim](https://github.com/prabirshrestha/asyncomplete.vim)
+  - [coc.nvim](https://github.com/neoclide/coc.nvim)
+- Move
   - [vim-easymotion](https://github.com/easymotion/vim-easymotion)
     | [3.0](http://haya14busa.com/vim-easymotion-ver-3-dot-0-overwin-motions/)
 - [color schemes](http://colorswat.ch/vim/)
   - [gruvbox](https://github.com/morhetz/gruvbox)
+  - [solarized](https://github.com/altercation/vim-colors-solarized)
+  - [molokai](https://github.com/tomasr/molokai)
+- [nerd-fonts](https://github.com/ryanoasis/nerd-fonts)
+  - [vim-devicons](https://github.com/ryanoasis/vim-devicons)
+  - [vim-nerdtree-syntax-highlight](https://github.com/tiagofumo/vim-nerdtree-syntax-highlight)
 - [neovim](https://neovim.io/)
   - [veonim](https://github.com/veonim/veonim)
   - [oni2](https://github.com/onivim/oni2)
@@ -115,6 +143,9 @@ Develop
   | [code](http://miffysora.wikidot.com/graphviz)
 
 ## Windows
+- [AutoHotkey](https://www.autohotkey.com/)
+  | [doc](https://www.autohotkey.com/docs/AutoHotkey.htm)
+  | [wiki](http://ahkwiki.net/Top)
 - [chocolatey](https://chocolatey.org/)
 - [CrystalDiskMark](https://crystalmark.info/ja/software/crystaldiskmark/)
 - [Ctrl2cap](https://technet.microsoft.com/ja-jp/sysinternals/bb897578.aspx)
@@ -140,6 +171,7 @@ Programming
 - [androidstudio](https://developer.android.com/studio/?hl=ja)
 - [cmake](https://cmake.org/)
   | [variables](https://cmake.org/cmake/help/v3.12/manual/cmake-variables.7.html)
+- [ninja](https://ninja-build.org/)
 - [markdeep](http://casual-effects.com/markdeep/)
 
 ## Git
