--- a/links.md.html
+++ b/links.md.html
@@ -61,12 +61,20 @@ Develop
 =======================================================
 <div id="col2">
 
+## Keyboard
+- [HHK](https://www.pfu.fujitsu.com/hhkeyboard/)
+- [Realforce](http://www.realforce.co.jp/)
+- [Niz](https://www.nizkeyboard.com/)
+
 ## Shell
 - [msys2](http://www.msys2.org/)
 - [pacman](https://wiki.archlinux.org/index.php/pacman)
 - [tmux](https://github.com/tmux/tmux)
 - [translate-shell](https://www.soimort.org/translate-shell/)
 - [w3m](http://w3m.sourceforge.net/index.ja.html)
+
+## mintty
+- [color schemes](https://github.com/oumu/mintty-color-schemes)
 
 ## フォント
 - [Best programming fonts](https://www.slant.co/topics/67/~best-programming-fonts)
@@ -213,12 +221,13 @@ Programming
   | [glad](https://github.com/Dav1dde/glad)
 - [imgui](https://github.com/ocornut/imgui)
 - [nativefiledialog](https://github.com/mlabbe/nativefiledialog)
-- [dlib](http://dlib.net/)
 - [stb](https://github.com/nothings/stb)
+- [dlib](http://dlib.net/)
 - [nanoflann](https://github.com/jlblancoc/nanoflann)
 - [nanort](https://github.com/lighttransport/nanort)
 - [cmdline](https://github.com/tanakh/cmdline)
 - [spdlog](https://github.com/gabime/spdlog)
+- [json11](https://github.com/dropbox/json11)
 - [cereal](https://github.com/USCiLab/cereal)
 - [picojson](https://github.com/kazuho/picojson)
 - [MessagePack](https://msgpack.org/)
